version/0.2/_sources/api/ansys/sam/sysml2/meta_model/action_usage/ActionUsage.rst.txt






:class:`ActionUsage`
====================


.. py:class:: ansys.sam.sysml2.meta_model.action_usage.ActionUsage(id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.occurrence_usage.OccurrenceUsage`, :py:obj:`ansys.sam.sysml2.meta_model.step.Step`


   
   Java class 'com.ansys.medini.metamodel.sysml.ActionUsage'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ActionUsage

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~action_definition`
            - Get the action definition property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.action_usage import ActionUsage

Property detail
---------------

.. py:property:: action_definition
   :type: List[Behavior]


   
   Get the action definition property.





   :Returns:

       :obj:`List`\["Behavior"]
           Value of property action definition.











   ..
       !! processed by numpydoc !!






